@@ -37,12 +37,12 @@ import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.interfaces.RSAPublicKey;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.net.ssl.KeyManager;
@@ -236,7 +236,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void noUri() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
-		new ApiListenerBuilder("test", Methods.GET).build();
+		new ApiListenerBuilder("test", List.of(Methods.GET)).build();
 
 		// Act
 		Response result = service(createRequest(null, Methods.GET));
@@ -249,7 +249,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void uriNotFound() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
-		new ApiListenerBuilder("test", Methods.GET).build();
+		new ApiListenerBuilder("test", List.of(Methods.GET)).build();
 
 		// Act
 		Response result = service(createRequest("/not-test", Methods.GET));
@@ -262,7 +262,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void methodNotAllowed() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/test";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Response result = service(createRequest(uri, Methods.PUT));
 		assertEquals(405, result.getStatus());
@@ -272,7 +272,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void simpleGet() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/test1";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Response result = service(createRequest(uri, Methods.GET));
 		assertEquals(200, result.getStatus());
@@ -283,12 +283,23 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void simpleHead() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/test1";
-		new ApiListenerBuilder(uri, Methods.HEAD).build();
+		new ApiListenerBuilder(uri, List.of(Methods.HEAD)).build();
 
 		Response result = service(createRequest(uri, Methods.HEAD));
 		assertEquals(200, result.getStatus());
 		assertEquals("", result.getContentAsString());
 		assertEquals("OPTIONS, HEAD", result.getHeader("Allow"));
+		assertNull(result.getErrorMessage());
+	}
+
+	@Test
+	public void simpleGetMultiMethod() throws ServletException, IOException, ListenerException, ConfigurationException {
+		String uri = "/test1";
+		new ApiListenerBuilder(uri, List.of(Methods.GET, Methods.POST)).build();
+
+		Response result = service(createRequest(uri, Methods.GET));
+		assertEquals(200, result.getStatus());
+		assertEquals("OPTIONS, GET, POST", result.getHeader("Allow"));
 		assertNull(result.getErrorMessage());
 	}
 
@@ -309,7 +320,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void simpleGetWithSlashes() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/test2";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Response result = service(createRequest(uri, Methods.GET));
 		assertEquals(200, result.getStatus());
@@ -320,7 +331,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void preFlightRequest() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/preflight/";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Response result = service(createRequest(uri, Methods.OPTIONS));
 		assertEquals(200, result.getStatus());
@@ -335,7 +346,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void preFlightRequestWithRequestHeader() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/preflight/";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Access-Control-Request-Headers", "Message-Id,CustomHeader");
@@ -353,7 +364,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void corsGetRequest() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/not-preflight/";
-		new ApiListenerBuilder(uri, Methods.POST).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("origin", "https://frankframework.org");
@@ -373,7 +384,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void apiListenerThatProducesXML() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/ApiListenerThatProducesXML/";
-		new ApiListenerBuilder(uri, Methods.PUT, null, MediaTypes.XML).build();
+		new ApiListenerBuilder(uri, List.of(Methods.PUT), null, MediaTypes.XML).build();
 
 		Response result = service(createRequest(uri, Methods.PUT, "<xml>data</xml>"));
 		assertEquals(200, result.getStatus());
@@ -386,7 +397,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void apiListenerThatProducesJSONForMethodPost() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/ApiListenerThatProducesJSON/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON).build();
 
 		Response result = service(createRequest(uri, Methods.POST, "{}"));
 		assertEquals(200, result.getStatus());
@@ -399,7 +410,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void apiListenerThatProducesJSONForMethodHead() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/ApiListenerThatProducesJSON/";
-		new ApiListenerBuilder(uri, Methods.HEAD, null, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.HEAD), null, MediaTypes.JSON).build();
 
 		Response result = service(createRequest(uri, Methods.HEAD, (String) null));
 
@@ -414,7 +425,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void apiListenerThatProducesJSONReturnsNoOutput() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerThatProducesJSONReturnsNoOutput/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON)
 			.withResponseContent("")
 			.build();
 		HttpServletRequest request = createRequest(uri, Methods.POST, "{}");
@@ -437,7 +448,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void apiListenerThatProducesJSONReturnsNoOutputEmptyStream() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerThatProducesJSONReturnsNoOutput/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON)
 			.withResponseContent(new ByteArrayInputStream(new byte[0]))
 			.build();
 		HttpServletRequest request = createRequest(uri, Methods.POST, "{}");
@@ -460,7 +471,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void apiListenerThatProducesJSONReturnsNoOutputEmptyReader() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerThatProducesJSONReturnsNoOutput/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON)
 			.withResponseContent(new StringReader(""))
 			.build();
 		HttpServletRequest request = createRequest(uri, Methods.POST, "{}");
@@ -483,7 +494,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void apiListenerThatProducesXMLReturnsNoOutputNonStringResultMessage() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerThatProducesXMLReturnsNoOutputNonStringResultMessage/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.XML).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.XML).build();
 		Map<String, String> headers = new HashMap<>();
 
 		HttpServletRequest request = createRequest(uri, Methods.POST, null, headers);
@@ -506,7 +517,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void clientAcceptHeaderDoesNotLikeJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerAllow/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON)
 			.build();
 
 		Map<String, String> headers = new HashMap<>();
@@ -524,7 +535,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void clientAcceptHeaderLovesJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/ApiListenerAllow/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -539,7 +550,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerDoesNotLikeContentTypeJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerDoesNotAcceptContentType";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.XML, null).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.XML, null).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -552,7 +563,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerLovesContentTypeJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerLovesContentTypeJSON";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.JSON, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.JSON, MediaTypes.JSON).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -569,7 +580,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void listenerRejectsRequestWithoutContentTypeHeaderWhenConsumesAttributeSet() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/listenerDoesNotAcceptRequestWithoutContentTypeHeader";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.XML, null).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.XML, null).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -587,7 +598,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void listenerAcceptsRequestWithoutContentTypeHeaderWhenConsumesAttributeNotSet() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/listenerAcceptsContentTypeJSON";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -607,7 +618,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerDetectContentTypeAndCharsetISO8859() throws Exception {
 		String uri="/listenerDetectMimeType";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.TEXT, MediaTypes.DETECT).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.TEXT, MediaTypes.DETECT).build();
 
 		URL url = ClassLoaderUtils.getResourceURL("/Util/MessageUtils/iso-8859-1.txt");
 		Message message = new UrlMessage(url);
@@ -625,7 +636,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentDetectContentTypeAndCharsetISO8859() throws Exception {
 		String uri="/listenerMultipartContent_DETECT";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.DETECT).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.DETECT).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.setBoundary("gc0p4Jq0M2Yt08jU534c0p");
@@ -649,7 +660,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentISO8859_JSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMultipartContent_JSON";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.setBoundary("gc0p4Jq0M2Yt08jU534c0p");
@@ -673,7 +684,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentISO8859_ANY() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMultipartContent_ANY";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.ANY).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.ANY).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.setBoundary("gc0p4Jq0M2Yt08jU534c0p");
@@ -697,7 +708,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentUTF8() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMultipartContentCharset";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.JSON, null, "string2").build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON, null, "string2").build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.addTextBody("string1", "<hallo>€ è</hallo>", ContentType.create("text/plain"));
@@ -729,7 +740,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMtomContent() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMtomContent";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART_RELATED, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART_RELATED, MediaTypes.JSON).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.setMtomMultipart();
@@ -760,7 +771,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentNoContentType() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMultipartContentNoContentType";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.addTextBody("string1", "<request/>", ContentType.create("text/xml"));//explicitly sent as UTF-8
@@ -779,7 +790,7 @@ public class ApiListenerServletTest extends Mockito {
 
 		// Arrange
 		String uri="/listenerMultipartContentNoContent";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		HttpServletRequest request = createRequest(uri, Methods.POST, builder.build());
@@ -796,7 +807,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void getRequestWithQueryParameters() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/queryParamTest";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -813,7 +824,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void getRequestWithQueryListParameters() throws Exception {
 		String uri="/queryParamTestWithListsItems";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -822,7 +833,7 @@ public class ApiListenerServletTest extends Mockito {
 
 		assertEquals(200, result.getStatus());
 		assertEquals("60", session.get("maxSpeed"));
-		List<String> transportList = Arrays.asList("car","bike","moped");
+		List<String> transportList = List.of("car", "bike", "moped");
 		assertEquals(transportList, session.get("transport"));
 		assertEquals("OPTIONS, GET", result.getHeader("Allow"));
 		assertNull(result.getErrorMessage());
@@ -831,7 +842,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void getRequestWithDynamicPath() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/dynamic/";
-		new ApiListenerBuilder(uri+"{poef}", Methods.GET).build();
+		new ApiListenerBuilder(uri + "{poef}", List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -847,7 +858,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void getRequestWithAsteriskPath() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/dynamic/";
-		new ApiListenerBuilder(uri+"*", Methods.GET).build();
+		new ApiListenerBuilder(uri + "*", List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -863,7 +874,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void customExitCode() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/exitcode";
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withExitCode(234)
 			.build();
 
@@ -882,7 +893,7 @@ public class ApiListenerServletTest extends Mockito {
 		// Arrange
 		String uri="/etag1";
 		Message repeatableMessage = new Message("{\"tralalalallala\":true}", new MessageContext().withModificationTime(DateFormatUtils.parseToInstant("2023-01-13 14:02:00", DateFormatUtils.GENERIC_DATETIME_FORMATTER)));
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withResponseContent(repeatableMessage)
 			.setUpdateEtag(true)
 			.build();
@@ -909,7 +920,7 @@ public class ApiListenerServletTest extends Mockito {
 		// Arrange
 		String uri="/etag2";
 		Message repeatableMessage = Message.asMessage(new Message("{\"tralalalallala\":true}").asByteArray());
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withResponseContent(repeatableMessage)
 			.build();
 
@@ -933,7 +944,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void eTagGetEtagMatches() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri = "/etag31";
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withExitCode(201)
 			.withResponseContent("{\"tralalalallala\":true}")
 			.build();
@@ -957,7 +968,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void eTagGetEtagDoesNotMatch() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri = "/etag32";
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withResponseContent("{\"tralalalallala\":true}")
 			.build();
 		String etagCacheKey = ApiCacheManager.buildCacheKey(uri);
@@ -979,7 +990,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void eTagPostEtagIfMatches() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/etag45";
-		new ApiListenerBuilder(uri, Methods.POST).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST)).build();
 		String etagCacheKey = ApiCacheManager.buildCacheKey(uri);
 		ApiCacheManager.getInstance().put(etagCacheKey, "my-etag-value");
 
@@ -996,7 +1007,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void eTagPostEtagDoesNotMatch() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/etag46";
-		new ApiListenerBuilder(uri, Methods.POST).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST)).build();
 		String etagCacheKey = ApiCacheManager.buildCacheKey(uri);
 		ApiCacheManager.getInstance().put(etagCacheKey, "my-etag-value");
 
@@ -1013,7 +1024,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void cookieAuthentication401() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/cookie";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.COOKIE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.COOKIE).build();
 
 		Map<String, String> headers = new HashMap<>();
 		Response result = service(createRequest(uri, Methods.POST, "{\"tralalalallala\":true}", headers));
@@ -1027,7 +1038,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void cookieNotFoundInCache401() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/cookie";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.COOKIE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.COOKIE).build();
 
 		Map<String, String> headers = new HashMap<>();
 		MockHttpServletRequest request = createRequest(uri, Methods.POST, "{\"tralalalallala\":true}", headers);
@@ -1044,7 +1055,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void cookieAuthentication200() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/cookie";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.COOKIE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.COOKIE).build();
 		String authToken = "random-token_thing";
 
 		ApiPrincipal principal = new ApiPrincipal();
@@ -1070,7 +1081,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void headerAuthentication401() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/cookie";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.HEADER).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.HEADER).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Authorization", "blalablaaaa");
@@ -1085,7 +1096,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void headerAuthentication200() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/header";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.HEADER).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.HEADER).build();
 		String authToken = "random-token_thing";
 
 		ApiPrincipal principal = new ApiPrincipal();
@@ -1108,7 +1119,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void authRoleAuthentication401() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/authRole2";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.AUTHROLE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.AUTHROLE).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Authorization", "am9objpkb2U=");
@@ -1128,7 +1139,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void authRoleAuthentication200() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/authRole2";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.AUTHROLE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.AUTHROLE).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Authorization", "am9objpkb2U=");
@@ -1148,7 +1159,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void testRequestWithMessageId() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri = "/messageIdTest1";
-		new ApiListenerBuilder(uri, Methods.POST)
+		new ApiListenerBuilder(uri, List.of(Methods.POST))
 			.setMessageIdHeader("X-Message-ID")
 			.setCorrelationIdHeader("X-Correlation-ID")
 			.build();
@@ -1173,7 +1184,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void testRequestWithMessageIdAndCorrelationId() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri = "/messageIdTest2";
-		new ApiListenerBuilder(uri, Methods.POST)
+		new ApiListenerBuilder(uri, List.of(Methods.POST))
 			.setMessageIdHeader("X-Message-ID")
 			.setCorrelationIdHeader("X-Correlation-ID")
 			.build();
@@ -1203,7 +1214,7 @@ public class ApiListenerServletTest extends Mockito {
 
 		// Arrange
 		String uri = "/messageWithJson2XmlValidator";
-		new ApiListenerBuilder(uri, method, null, MediaTypes.XML).build();
+		new ApiListenerBuilder(uri, List.of(method), null, MediaTypes.XML).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("accept", "application/xml");
@@ -1239,7 +1250,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void setupParseAcceptHeaderAndValidateProduces(String acceptHeaderValue, MediaTypes produces) throws Exception {
 		// Arrange
 		String uri = "/messageWithAcceptHeaderAndProduces"+produces;
-		new ApiListenerBuilder(uri, Methods.GET, null, produces).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET), null, produces).build();
 
 		Map<String, String> headers = new HashMap<>();
 		if(acceptHeaderValue != null) {
@@ -1260,7 +1271,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void testEndpointDoesNotAcceptHeader(String acceptHeaderValue) throws Exception {
 		// Arrange
 		String uri = "/messageThatDoesNotAcceptAcceptHeader";
-		new ApiListenerBuilder(uri, Methods.GET, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.GET), null, MediaTypes.JSON)
 			.build();
 
 		Map<String, String> headers = new HashMap<>();
@@ -1280,7 +1291,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void testRequestExceptionHandling() throws Exception {
 		// Arrange
 		String uri = "/testThrowsError";
-		new ApiListenerBuilder(uri, Methods.GET, null, null)
+		new ApiListenerBuilder(uri, List.of(Methods.GET), null, null)
 			.withShouldThrow(true)
 			.build();
 
@@ -1296,7 +1307,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithRequiredIssuer() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setAuthenticationMethod(AuthenticationMethods.JWT)
@@ -1312,7 +1323,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithoutRequiredIssuer() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setAuthenticationMethod(AuthenticationMethods.JWT)
 			.build();
@@ -1327,7 +1338,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithIllegalRequiredIssuer() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setAuthenticationMethod(AuthenticationMethods.JWT)
 			.setRequiredIssuer("test")
@@ -1343,7 +1354,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void testJwtTokenParsingWithJwtHeader() throws Exception {
 		final String JWT_HEADER = "X-JWT-Assertion";
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 				.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 				.setRequiredIssuer("JWTPipeTest")
 				.setAuthenticationMethod(AuthenticationMethods.JWT)
@@ -1363,7 +1374,7 @@ public class ApiListenerServletTest extends Mockito {
 		String token="eyJhbGciOiJSUzI1NiJ9."
 				+ "eyJpc3MiOiJKV1RQaXBlVGVHzdCIsInN1YiI6IlVuaXRUZXN0IiwiYXVkIjoiRnJhbWV3b3JrIiwianRpIjoiMTIzNCJ9."
 				+ "U1VsMoITf5kUEHtzfgJTyRWEDZ2gjtTuQI3DVRrJcpden2pjCsAWwl4VOr6McmQkcndZj0GPvN4w3NkJR712ltlsIXw1zMm67vuFY0_id7TP2zIJh3jMkKrTuSPE-SBXZyVnIq22Q54R1VMnOTjO6spbrbYowIzyyeAC7U1RzyB3aKxTgeYJS6auLBaiR3-SWoXs_hBnbIIgYT7AC2e76ICpMlFPQS_e2bcqe1B-yz69se8ZlJgwWK-YhqHMoOCA9oQy3t_cObQI0KSzg7cYDkkQ17cWF3SoyTSTs6Cek_Y97Z17lJX2RVBayPc2uI_oWWuaIUbukxAOIUkgpgtf6g";
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 		.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 		.setAuthenticationMethod(AuthenticationMethods.JWT)
 		.build();
@@ -1381,7 +1392,7 @@ public class ApiListenerServletTest extends Mockito {
 		String token="eyJhbGciOiJSUzI1NiJ9."
 				+ "eyJpc3MiOiJKV1RQaXBlVGVzdCIsInN1YiI6IlVuaXRUZXN0IiwiYXVkIjoiRnJhbWV3b3JrIiwianRpIjoiMTIzNCJ9."
 				+ "U1VsMoITf5kUEHtzfgJTyRWKEDZ2gjtTuQI3DVRrJcpden2pjCsAWwl4VOr6McmQkcndZj0GPvN4w3NkJR712ltlsIXw1zMm67vuFY0_id7TP2zIJh3jMkKrTuSPE-SBXZyVnIq22Q54R1VMnOTjO6spbrbYowIzyyeAC7U1RzyB3aKxTgeYJS6auLBaiR3-SWoXs_hBnbIIgYT7AC2e76ICpMlFPQS_e2bcqe1B-yz69se8ZlJgwWK-YhqHMoOCA9oQy3t_cObQI0KSzg7cYDkkQ17cWF3SoyTSTs6Cek_Y97Z17lJX2RVBayPc2uI_oWWuaIUbukxAOIUkgpgtf6g";
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setAuthenticationMethod(AuthenticationMethods.JWT)
 			.build();
@@ -1396,7 +1407,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithRequiredClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setRequiredClaims("sub, aud")
@@ -1413,7 +1424,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithExactMatchClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setExactMatchClaims("sub=UnitTest, aud=Framework")
@@ -1430,7 +1441,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithAnyMatchClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setAnyMatchClaims("aud=nomatch, sub=UnitTest")
@@ -1447,7 +1458,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithExactAndAnyMatchClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setExactMatchClaims("sub=UnitTest")
@@ -1465,7 +1476,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenMissingRequiredClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setRequiredClaims("sub, aud, kid")
@@ -1481,7 +1492,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenUnexpectedValueForExactMatchClaim() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setExactMatchClaims("sub=UnitTest, aud=test")
@@ -1497,7 +1508,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenNoMatchForAnyMatchClaim() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setAnyMatchClaims("sub=test, aud=test")
@@ -1513,7 +1524,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenWithRoleClaim() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setRoleClaim("sub")
@@ -1529,7 +1540,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenWithRoleClaimAndEmptyAuthRoles() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setRoleClaim("sub")
@@ -1737,22 +1748,26 @@ public class ApiListenerServletTest extends Mockito {
 		private final ApiListener listener;
 		private MessageHandler handler;
 
-		public ApiListenerBuilder(String uri, Methods method) throws ListenerException, ConfigurationException {
+		public ApiListenerBuilder(String uri, List<Methods> method) throws ListenerException, ConfigurationException {
 			this(uri, method, null, null);
 		}
 
-		public ApiListenerBuilder(String uri, Methods method, AuthMethods authMethod) throws ListenerException, ConfigurationException {
+		public ApiListenerBuilder(String uri, List<Methods> method, AuthMethods authMethod) throws ListenerException, ConfigurationException {
 			this(uri, method, null, null, authMethod,null);
 		}
 
-		public ApiListenerBuilder(String uri, Methods method, MediaTypes consumes, MediaTypes produces) throws ListenerException, ConfigurationException {
+		public ApiListenerBuilder(String uri, List<Methods> method, MediaTypes consumes, MediaTypes produces) throws ListenerException, ConfigurationException {
 			this(uri, method, consumes, produces, null, null);
 		}
 
-		public ApiListenerBuilder(String uri, Methods method, MediaTypes consumes, MediaTypes produces, AuthMethods authMethod, String multipartBodyName) {
+		public ApiListenerBuilder(String uri, List<Methods> method, MediaTypes consumes, MediaTypes produces, AuthMethods authMethod, String multipartBodyName) {
 			listener = spy(ApiListener.class);
 			listener.setUriPattern(uri);
-			listener.setMethod(EnumUtils.parse(HttpMethod.class, method.name()));
+
+			String methods = method.stream()
+					.map(m -> EnumUtils.parse(HttpMethod.class, m.name()).name())
+					.collect(Collectors.joining(","));
+			listener.setMethod(methods);
 
 			handler = new MessageHandler();
 			listener.setHandler(handler);
